# Player

./: CMakeLists.txt  Main.qml  main.cpp
